--- a/src/modules/user-navigation/user-navigation.scss
+++ b/src/modules/user-navigation/user-navigation.scss
@@ -1,3 +1,5 @@
+@import '../../styles/variables.scss';
+
 .user-nav {
   display: flex;
   align-items: center;
@@ -25,5 +27,16 @@
     height: 30px;
     display: grid;
     place-content: center;
+  }
+
+  @media screen and (max-width: $width-tablet-min) {
+    button {
+      padding: 2px;
+    }
+
+    svg {
+      width: 26px;
+      height: 26px;
+    }
   }
 }
