--- a/src/style.scss
+++ b/src/style.scss
@@ -69,14 +69,12 @@ body {
 
 body,
 html {
+  min-width: 360px;
+  height: 100vh;
   font-family: 'Gill Sans', sans-serif;
   font-size: 16px;
-  min-width: 300px;
-  max-width: 1920px;
-  margin: auto;
   scroll-behavior: smooth;
   background: linear-gradient(to right, $color-bg2, $color-bg3);
-  height: 100vh;
 }
 
 h1 {
