--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,3 +1,5 @@
 $color-bg: #d3dfdf;
 $color-warning: tomato;
 $font-size-warning: 14px;
+
+$width-tablet-min: 768px;
